--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@
 #   CMakeLists.txt
 #
 #   Copyright 2009-2011, Alan Calvert
-#   Copyright 2014-2021, Will Godfrey & others
+#   Copyright 2014-2023, Will Godfrey & others
 #
 #   This file is part of yoshimi, which is free software: you can
 #   redistribute it and/or modify it under the terms of the GNU General
@@ -45,13 +45,13 @@ set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 # vvv
 #add_definitions(-Wpedantic) # full ISO spec
 #add_definitions(-Werror) # warnings as errors
-#add_definitions(-Wfatal-errors) # stop on first
-#add_definitions(-Werror=format-security)
-#add_definitions(-Wextra)
-#add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
+add_definitions(-Wfatal-errors) # stop on first
+add_definitions(-Werror=format-security)
+add_definitions(-Wextra)
+add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "2.2.3")
+set (YOSHIMI_VERSION "2.2.3 M")
 
 add_definitions (-DMIN_CONFIG_MAJOR=2)
 add_definitions (-DMIN_CONFIG_MINOR=0)
@@ -342,6 +342,9 @@ if (BuildWithFLTK)
         "MidiLearnUI"
     )
 
+    set (guitmp generated-gui-sources)
+    file (MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/${guitmp}")
+
 # workaround fltk_wrap_ui breakage
     set (FltkUI_sources)
     set (FltkUI_headers)
@@ -350,9 +353,12 @@ if (BuildWithFLTK)
         set (sourcefile "${basename}.cpp")
         set (headerfile "${basename}.h")
         add_custom_command(
-            OUTPUT ${sourcefile}
-            COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
-            DEPENDS ${fluidfile}
+          OUTPUT ${sourcefile}
+          WORKING_DIRECTORY ${guitmp}
+          COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
+          COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${sourcefile} ..
+          COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${headerfile} ..
+          DEPENDS ${fluidfile}
         )
         set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
         set (FltkUI_headers ${FltkUI_headers} "${headerfile}")
