BugFix: controllers breath switch not updating across parts. BugFix: controllers knob colours not indicating default status across parts. Bugfix: humanise slider colours not indicating default status across parts. BugFix: SysfEff send knob colours not indicating default status across parts.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,7 +51,7 @@ add_definitions(-Wextra)
 add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "2.3.0.2")
+set (YOSHIMI_VERSION "2.3.0 M")
 
 add_definitions (-DMIN_CONFIG_MAJOR=2)
 add_definitions (-DMIN_CONFIG_MINOR=3)
@@ -342,6 +342,9 @@ if (BuildWithFLTK)
         "MidiLearnUI"
     )
 
+    set (guitmp generated-gui-sources)
+    file (MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/${guitmp}")
+
 # workaround fltk_wrap_ui breakage
     set (FltkUI_sources)
     set (FltkUI_headers)
@@ -351,7 +354,10 @@ if (BuildWithFLTK)
         set (headerfile "${basename}.h")
         add_custom_command(
             OUTPUT ${sourcefile}
+            WORKING_DIRECTORY ${guitmp}
             COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
+            COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${sourcefile} ..
+            COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${headerfile} ..
             DEPENDS ${fluidfile}
         )
         set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
