--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,13 +45,13 @@ set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 # vvv
 #add_definitions(-Wpedantic) # full ISO spec
 #add_definitions(-Werror) # warnings as errors
-#add_definitions(-Wfatal-errors) # stop on first
-#add_definitions(-Werror=format-security)
-#add_definitions(-Wextra)
-#add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
+add_definitions(-Wfatal-errors) # stop on first
+add_definitions(-Werror=format-security)
+add_definitions(-Wextra)
+add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "2.3.0.3")
+set (YOSHIMI_VERSION "2.3.0 M")
 
 add_definitions (-DMIN_CONFIG_MAJOR=2)
 add_definitions (-DMIN_CONFIG_MINOR=3)
@@ -342,6 +342,9 @@ if (BuildWithFLTK)
         "MidiLearnUI"
     )
 
+    set (guitmp generated-gui-sources)
+    file (MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/${guitmp}")
+
 # workaround fltk_wrap_ui breakage
     set (FltkUI_sources)
     set (FltkUI_headers)
@@ -351,7 +354,10 @@ if (BuildWithFLTK)
         set (headerfile "${basename}.h")
         add_custom_command(
             OUTPUT ${sourcefile}
+            WORKING_DIRECTORY ${guitmp}
             COMMAND ${FLTK_FLUID_EXECUTABLE} ARGS -c -o .cpp ${fluidfile}
+            COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${sourcefile} ..
+            COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${headerfile} ..
             DEPENDS ${fluidfile}
         )
         set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
@@ -516,12 +522,16 @@ install (FILES ${CMAKE_CURRENT_BINARY_DIR}/yoshimi.desktop
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/applications)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.png
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pixmaps)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/64/yoshimi.png
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/64x64/apps)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/128/yoshimi.png
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/128x128/apps)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/256/yoshimi.png
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/256x256/apps)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.svg
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi_alt.svg
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps)
-install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/metainfo/yoshimi.appdata.xml
-    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/metainfo)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/metainfo/yoshimi.metainfo.xml
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/metainfo)
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/../desktop/yoshimi.1
