BugFix: copy/paste GUI 'Type' field only correct on first call Removed all of old presets code except PresetsUpdate( Some cleanups and extra comments in UnifiedPresets

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -317,7 +317,7 @@ set (Params_sources
     Params/FilterParams.cpp  Params/LFOParams.cpp
     Params/SUBnoteParameters.cpp  Params/PADnoteParameters.cpp
     Params/Controller.cpp  Params/Presets.cpp
-    Params/PresetsStore.cpp  Params/UnifiedPresets.cpp
+    Params/UnifiedPresets.cpp
     Params/OscilParameters.cpp
 )
 
