Don't duplicate text data in every source file.
Instead compile it once, and include that. This significantly reduces
both compilation time and binary size. Beyond my wildest expectations,
actually. On my system the compilation time went from 2m 12s to 1m 9s,
and the binary size went from 12M to 3.8M, which was way more than I
expected.

Signed-off-by: Kristian Amlie <kristian@amlie.name>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -303,6 +303,7 @@ set (Interface_Sources
     Interface/MidiLearn.cpp
     Interface/MidiDecode.cpp
     Interface/RingBuffer.h
+    Interface/TextLists.cpp
     Interface/TextLists.h
 )
 
