[guiconnect] - integrate the new communication hub
- GuiDataExchange becomes a sub-component of Interchange
- thus, each SynthEngine indirectly holds now a GuiDataExchange
- it is wired with the toGUI ringbuffer to publish push-updates
- define a new InterfaceAnchor record, used to "bootstrap" the UI communication
- establish a wiring-and-initialisation function in SynthEngine,
  which will pick up all RoutingTags from sub-components in the engine
  and mark them into InterfaceAnchor; this allows the UI side in MasterUI
  to establish virtual 1:1 connections for all components involved in
  push-data exchanges

--- a/src/LV2_Plugin/CMakeLists.txt
+++ b/src/LV2_Plugin/CMakeLists.txt
@@ -51,6 +51,7 @@ file (GLOB yoshimi_misc_files
 file (GLOB yoshimi_interface_files
     ../Interface/GuiDataExchange.cpp ../Interface/GuiDataExchange.h
     ../Interface/GuiDataExchangeTest.cpp
+    ../Interface/InterfaceAnchor.h
     ../Interface/MidiDecode.cpp ../Interface/MidiDecode.h
     ../Interface/InterChange.cpp ../Interface/InterChange.h
     ../Interface/Data2Text.cpp ../Interface/Data2text.h
