--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -303,6 +303,7 @@ set (Interface_Sources
     Interface/GuiDataExchange.h
     Interface/GuiDataExchange.cpp
     Interface/GuiDataExchangeTest.cpp
+    Interface/InterfaceAnchor.h
     Interface/Text2Data.cpp
     Interface/MidiLearn.cpp
     Interface/MidiDecode.cpp
