--- a/src/LV2_Plugin/CMakeLists.txt
+++ b/src/LV2_Plugin/CMakeLists.txt
@@ -3,6 +3,7 @@
 #
 #   Copyright 2014, Andrew Deryabin <andrewderyabin@gmail.com>
 #   Copyright 2018-2023, Will Godfrey & others
+#   Copyright 2024 Kristian Amlie
 #
 #   This file is part of yoshimi, which is free software: you can
 #   redistribute it and/or modify it under the terms of the GNU General
