--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,8 +46,9 @@ set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 # vvv
 #add_definitions(-Wpedantic) # full ISO spec
 #add_definitions(-Werror) # warnings as errors
-add_definitions(-Wfatal-errors) # stop on first
+#add_definitions(-Wfatal-errors) # stop on first
 add_definitions(-Werror=format-security)
+#add_definitions(-fsanitize=address)
 add_definitions(-Wextra)
 add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 #add_definitions(-Wno-unqualified-std-cast-call) # supresses clang warning 'unqualified call'
