Instances: use a central InstanceManager and registry
The goal of this refactoring is to extract handling of »Synth Instances«
from the `main.cpp` code and make instance handling more explicit and clear.
Notably the _intention_ to start an instance shall be stated overtly,
while the task of actually starting that instance would become an
implementation detail hidden in the InstanceManager.

InstanceManager is accessed as Meyer's singleton while hiding all implementation details

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -294,8 +294,8 @@ set (Effects_sources
 )
 
 set (Misc_sources
-    Misc/Bank.cpp Misc/DataBlockBuff.cpp  Misc/CmdOptions.cpp  Misc/Config.cpp
-    Misc/BuildScheduler.cpp  Misc/Microtonal.cpp  Misc/Part.cpp  Misc/Splash.cpp
+    Misc/Bank.cpp  Misc/BuildScheduler.cpp  Misc/CmdOptions.cpp  Misc/DataBlockBuff.cpp
+    Misc/Config.cpp  Misc/InstanceManager.cpp  Misc/Microtonal.cpp  Misc/Part.cpp  Misc/Splash.cpp
     Misc/SynthEngine.cpp  Misc/WavFile.cpp  Misc/XMLwrapper.cpp
 )
 
