Instances: switch main to use the new InstanceManager
Systematically walk through main.cpp, verify every line
and switch all functionality over to the equivalent replacement
implemented thus far in the InstanceManager.

The most tangible change is that we do not use FLTK-messaging
any more to trigger UI startup. Moreover, some aspects in the
instance lifecycle have been slightly reordered, and we invoke
a dedicated post-boot-hook in the SynthEngine now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -295,7 +295,7 @@ set (Effects_sources
 
 set (Misc_sources
     Misc/Bank.cpp  Misc/BuildScheduler.cpp  Misc/CmdOptions.cpp  Misc/DataBlockBuff.cpp
-    Misc/Config.cpp  Misc/InstanceManager.cpp  Misc/Microtonal.cpp  Misc/Part.cpp  Misc/Splash.cpp
+    Misc/Config.cpp  Misc/InstanceManager.cpp  Misc/Microtonal.cpp  Misc/Part.cpp
     Misc/SynthEngine.cpp  Misc/WavFile.cpp  Misc/XMLwrapper.cpp
 )
 
@@ -382,6 +382,7 @@ if (BuildWithFLTK)
         UI/WidgetMWSlider.cpp
         UI/YoshiWin.cpp
         UI/MiscGui.cpp
+        UI/Splash.cpp
     )
     set (YOSHI_INCLUDES ${FLTK_INCLUDE_DIR})
 endif ()
