BugFix: Cmake failing on Suse building.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -463,7 +463,7 @@ set(ExternLibraries
     ${FLTK_LIBRARIES}
     ${MXML_LIBRARIES}
     ${ALSA_LIBRARIES}
-    ${JACK_LIBRARIES}
+    ${JACK_LINK_LIBRARIES}
     ${LIBSNDFILE_LIBRARIES}
     ${FFTW3F_LIBRARIES}
     ${LIBCAIRO_LIBRARIES}
