--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 
 project (Yoshimi)
 
-set (YOSHIMI_VERSION "2.3.3.3")
+set (YOSHIMI_VERSION "2.3.4 rc1")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
 
