Adjust tooltip size by active window & recalculate dynamic text size

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -387,6 +387,7 @@ if (BuildWithFLTK)
         UI/WidgetMWSlider.cpp
         UI/MiscGui.cpp
         UI/Splash.cpp
+        UI/ScaleTrackedWindow.cpp
     )
     set (YOSHI_INCLUDES ${FLTK_INCLUDE_DIR})
 endif ()
