Replaced rotary knob change with improved version from Jesper.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 
 project (Yoshimi)
 
-set (YOSHIMI_VERSION "2.3.5 rc3")
+set (YOSHIMI_VERSION "2.3.5 M")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
 
@@ -101,8 +101,6 @@ option (BuildForDebug "Debug build without optimisation. Enable gdb debugging su
 option (BuildForDiagnostic "Add diagnostics and debug info for optimised release build" OFF)
 
 option (BuildWithFLTK "Build with FLTK GUI" ON)
-
-option (BuildWithFLTK4 "Build for FLTK V4+" ON)
 
 #option to build lv2 plugin
 option (LV2Plugin "Build yoshimi lv2 plugin interface" ON)
@@ -151,10 +149,6 @@ set (BuildOptions_Release
 
 if (BuildWithFLTK)
     add_definitions (-DGUI_FLTK)
-endif ()
-
-if (BuildWithFLTK4)
-    add_definitions (-DIS_FLTK_4)
 endif ()
 
 find_package (PkgConfig REQUIRED)
