BugFix: Banks not showing Yoshimi type instrument colour. BugFix: Off by 1 errors in CLI - envelope code. Set bugfix version 2.3.5.1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 
 project (Yoshimi)
 
-set (YOSHIMI_VERSION "2.3.5 M")
+set (YOSHIMI_VERSION "2.3.5.1")
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
 
