MXML: implement version switch and new option handling
NOTE: CMake build now first searches for MXML-4 and falls back to the legacy version

Most of the differences between old and new API can be accommodated by definitions,
but the handling of parsing- and render-option has changed significantly.

Thus we provide now the implementation function for parsing and rendering
embedded into our Policy baseclass, and in two distinct variants for
the old v3 API and the new v4 API. The functionality of the whitespace
callback has remained the same, but the signature has changed, which
can be accommodated with a capture-less lambda as adaptor, so that
the code for the old API variant can invoke the new callback

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -179,7 +179,7 @@ find_package(ZLIB REQUIRED)
 pkg_check_modules (FFTW3F REQUIRED fftw3f>=0.22)
 
 # mxml
-pkg_check_modules (MXML REQUIRED mxml>=2.5)
+pkg_search_module (MXML REQUIRED mxml4 mxml>=2.5)
 
 # Alsa
 if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
